--- a/package.json
+++ b/package.json
@@ -10,29 +10,32 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "~38.0.8",
-    "expo-splash-screen": "~0.3.1",
-    "expo-status-bar": "^1.0.2",
-    "expo-updates": "~0.2.10",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "~0.62.2",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-screens": "~2.9.0",
-    "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7",
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "appcenter": "3.1.1",
+    "appcenter-analytics": "3.1.1",
+    "appcenter-crashes": "3.1.1",
+    "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linking": "^1.0.1",
+    "expo-splash-screen": "~0.3.1",
+    "expo-status-bar": "^1.0.2",
+    "expo-updates": "~0.2.10",
     "expo-web-browser": "~8.3.1",
-    "react-native-safe-area-context": "~3.0.7"
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "~0.62.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-unimodules": "~0.10.1",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
